feat(api): implement full users CRUD
